# WebAppDIRAC

./:  .prettierignore  .eslintignore  .eslintrc  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .pylintrc3k  .tern-project  .travis.yml  MANIFEST.in  README.md  README.rst  __init__.py  dirac-postInstall.py  environment.yml  extjs-template.xml  pyproject.toml  release.notes  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE  labeler.yml
.github/workflows/: codestyle-py3.yml  codestyle.yml  deployment.yml  labeler.yml  pr-sweep.yml  semantic.yml
.travis.d/: runPylint.sh
Core/: App.py  Conf.py  ConfMgr.py  CoreHandler.py  HandlerMgr.py  Routes.py  StaticHandler.py  TemplateLoader.py  WebHandler.py
Lib/: Compiler.py  CompilerHelper.py  Conf.py  SessionData.py  WebHandler.py
Lib/CompileTemplates/: app.tpl  core.tpl
WebApp/: web.cfg
WebApp/handler/: AccountingHandler.py  AccountingPlot2Handler.py  AccountingPlotHandler.py  AccountingPlotOldHandler.py  ActivityMonitorHandler.py  ApplicationWizardHandler.py  AuthenticationHandler.py  AuthentificationHandler.py  AuthontificationHandler.py  ComponentHistoryHandler.py  ConfigurationManagerHandler.py  DataLoggingHandler.py  DowntimesHandler.py  ExampleAppHandler.py  FileCatalogHandler.py  JobLaunchpadHandler.py  JobMonitorHandler.py  JobSummaryHandler.py  LHCbJobMonitorHandler.py  MetadataCatalogHandler.py  MonitoringHandler.py  NotepadHandler.py  Palette.py  PilotMonitorHandler.py  PilotSummaryHandler.py  ProxyManagerHandler.py  ProxyUploadHandler.py  PublicStateManagerHandler.py  RegistryManagerHandler.py  RequestMonitorHandler.py  ResourceSummaryHandler.py  RootHandler.py  SiteSummaryHandler.py  SpaceOccupancyHandler.py  SystemAdministrationHandler.py  TransformationMonitorHandler.py  UPHandler.py
WebApp/handler/TRASH/: GridWindowHandler.py
WebApp/static/DIRAC/: Notepad.js
WebApp/static/DIRAC/TRASH/: AccordionWindow.js  GridWindow.js  Notepad.js  TabWindow.js
WebApp/static/core/css/: BoxSelect.css  TabScrollerMenu.css  css.css  desktop.css  iconset.css  tabtheme.css
WebApp/static/core/js/: App.js  Desktop.js  DiracBoxSelect.js  DiracMultiSelect.js  HelpFunctions.js  Module.js  StartMenu.js  Stateful.js  TaskBar.js  ToolButton.js  Video.js  Wallpaper.js  Window.js
WebApp/static/core/production/: all-classes.js
WebApp/static/docs/: data-0722dd58a4529b70dd58c050b7cdc517.js  index.html
WebApp/static/docs/output/: DIRAC.ApplicationWizard.classes.Image.js  DIRAC.ExampleApp.classes.ExampleApp.js  DIRAC.ProxyManager.classes.ProxyManager.js  DIRAC.RequestMonitor.classes.RequestMonitor.js  DIRAC.TransformationMonitor.classes.GridPanel.js  DIRAC.TransformationMonitor.classes.TransformationMonitor.js  Ext.dirac.core.App.js  Ext.dirac.core.AppView.js  Ext.dirac.core.CommonFunctions.js  Ext.dirac.core.Module.js  Ext.dirac.core.Panel.js  Ext.dirac.core.StateManagement.js  Ext.dirac.utils.DiracAjaxProxy.js  Ext.dirac.utils.DiracApplicationContextMenu.js  Ext.dirac.utils.DiracArrayStore.js  Ext.dirac.utils.DiracBaseSelector.js  Ext.dirac.utils.DiracBoxSelect.js  Ext.dirac.utils.DiracBoxSelectField.js  Ext.dirac.utils.DiracFileLoad.js  Ext.dirac.utils.DiracGridPanel.js  Ext.dirac.utils.DiracIdListButton.js  Ext.dirac.utils.DiracJsonStore.js  Ext.dirac.utils.DiracMultiSelect.js  Ext.dirac.utils.DiracNumericField.js  Ext.dirac.utils.DiracPageSizeCombo.js  Ext.dirac.utils.DiracPagingToolbar.js  Ext.dirac.utils.DiracRowExpander.js  Ext.dirac.utils.DiracTextField.js  Ext.dirac.utils.DiracTimeSearchPanel.js  Ext.dirac.views.desktop.Main.js  Ext.dirac.views.desktop.StartMenu.js  Ext.dirac.views.desktop.TaskBar.js  Ext.dirac.views.desktop.Wallpaper.js  Ext.dirac.views.desktop.Window.js  Ext.dirac.views.tabs.ContextMenu.js  Ext.dirac.views.tabs.Image.js  Ext.dirac.views.tabs.LeftContainer.js  Ext.dirac.views.tabs.Main.js  Ext.dirac.views.tabs.MenuTabs.js  Ext.dirac.views.tabs.PanelDragDrop.js  (+19 more)
WebApp/static/docs/source/: AccountingPlot.css.html  AccountingPlot.html  ActivityMonitor.css.html  ActivityMonitor.html  ActivityTreeModel.html  App.html  AppView.html  ApplicationWizard.html  CommonFunctions.html  ConfigurationManager.css.html  ConfigurationManager.html  Container.html  ContextMenu.html  DesktopSettings.html  DiracAjaxProxy.html  DiracApplicationContextMenu.html  DiracArrayStore.html  DiracBoxSelect.html  (+89 more)
WebApp/template/: root.tpl
WebApp/template/ConfigurationManager/: diffConfig.tpl
WebApp/template/JobMonitor/: standalone.tpl
WebApp/template/build_core/: root.tpl
scripts/: dirac-webapp-compile.py  dirac-webapp-js-optimizer.sh  dirac-webapp-run.py
src/WebAppDIRAC/: __init__.py
src/WebAppDIRAC/Core/: App.py  CoreHandler.py  HandlerMgr.py  StaticHandler.py  TemplateLoader.py
src/WebAppDIRAC/Lib/: Conf.py  SessionData.py  WebHandler.py
src/WebAppDIRAC/WebApp/: web.cfg
src/WebAppDIRAC/scripts/: dirac_webapp_run.py  tornado-start-web.py
tests/: runPylint.sh
(+282 files in other folders)
