###############################################################################
# Setuptools
###############################################################################

[metadata]
name = WebAppDIRAC
description = WebAppDIRAC is a portal for the DIRAC software.
long_description = file: README.rst
url = https://github.com/DIRACGrid/WebAppDIRAC/
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
python_requires = >=3.9
package_dir=
    =src
packages = find:

install_requires =
    diraccfg
    packaging
    requests >=2.9.1
    six
    tornado

zip_safe = False
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
server =
    # These dependecies are made optional to make it easier to build extensions
    dirac ~=7.3.5
    DIRACWebAppResources ~=1.0
testing =
    autopep8 ==1.3.3
    coverage
    mock >=1.0.1
    pylint >=1.6.5
    pytest >=3.6
    pytest-cov >=2.2.0
    pytest-mock

[options.entry_points]
dirac =
    metadata = WebAppDIRAC:extension_metadata
# For details on adding additional scripts to vanilla DIRAC or external extensions see
# https://dirac.readthedocs.io/en/integration/DeveloperGuide/AddingNewComponents/DevelopingCommands/index.html
console_scripts =
    dirac-webapp-run = WebAppDIRAC.scripts.dirac_webapp_run:main

###############################################################################
# Linting
###############################################################################

# pep8 binary will still look into this section
[pep8]
# Pep8 codes:
# E111 - indentation is not a multiple of four
# E114  indentation is not a multiple of four (comment)
ignore=E111,E114

# Make it format also comments, and method signatures
aggressive=2

# Understood by pep8 and autopep8
max_line_length=120
# indent_size is unknown to pep8, but not to autopep8
indent_size=2

[pycodestyle]
# Pep8 codes:
# E111 - indentation is not a multiple of four
# E114 - indentation is not a multiple of four (comment)
# E402 - module level import not at top of file (for scripts)
# W503 - line break before binary operator (stupid, complains after or before...)
# W504 - line break after binary operator (stupid, complains after or before...)
ignore=E111,E114,E402,W503,W504
max_line_length=120
