###############################################################################
# Setuptools
###############################################################################

[metadata]
name = WebAppDIRAC
description = WebAppDIRAC is a portal for the DIRAC software.
long_description = file: README.rst
url = https://github.com/DIRACGrid/WebAppDIRAC/
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
python_requires = >=3.9
package_dir=
    =src
packages = find:

install_requires =
    diraccfg
    packaging
    requests >=2.9.1
    tornado

zip_safe = False
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
server =
    # These dependecies are made optional to make it easier to build extensions
    dirac ~=8.1.0a0
    DIRACWebAppResources ~=1.0
testing =
    autopep8 ==1.3.3
    coverage
    mock >=1.0.1
    pylint >=1.6.5
    pytest >=3.6
    pytest-cov >=2.2.0
    pytest-mock

[options.entry_points]
dirac =
    metadata = WebAppDIRAC:extension_metadata
# For details on adding additional scripts to vanilla DIRAC or external extensions see
# https://dirac.readthedocs.io/en/integration/DeveloperGuide/AddingNewComponents/DevelopingCommands/index.html
console_scripts =
    dirac-webapp-run = WebAppDIRAC.scripts.dirac_webapp_run:main

###############################################################################
# Linting
###############################################################################

[pycodestyle]
# Pep8 codes:
# E203 - Whitespace before ':' (spaces should be present for list slices)
# E211 - Whitespace before '(' (black incorrectly formats exec when in Python 2 mode)
# E266 - Too many leading '#' for block comment
# E402 - module level import not at top of file (for scripts)
# W503 - line break before binary operator (stupid, complains after or before...)
ignore = E203, E211, E266, E402, W503
# TODO: This should be reduced back to 120 at some point
max_line_length=130
